example/fail/fail_type6.dl

int $[main]{
    int x ;
    int y ;
    x<-1;
    x<-x+"abc";//invalid operation
    
}

